<resources>
    <string name="app_name">IntentFatkhur</string>
    <string name="move_activity">PINDAH AKTIVITY</string>
    <string name="move_with_data">PINDAH ACTIVITY DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITY UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITY</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_greend">HIJAU</string>
    <string name="_blu">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH ACTIVITY</string>
</resources>